--- a/index.html
+++ b/index.html
@@ -226,9 +226,9 @@
                             </div>
                         </div>
                         <div class="check call-check">
-                            <div class="checkbox">
-                                <input type="checkbox" id="check1">
-                                <label for="check1" class="call-checkbox">I agree to the processing of personal data</label>
+                            <div class="agree">
+                                <input type="agree" id="check1">
+                                <label for="check1" class="call-agree">I agree to the processing of personal data</label>
                             </div>
                         </div>
                         <div class="call-button">
