Arrows fixed, fotter added, map added, form added;

--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
                     </div>
                 </div>
             </div>
-            <div class="tutorial mobile-none" id="tutorial">
+            <div class="tutorial" id="tutorial">
                 <div class="tutorial-container">
-                    <div class="steps">
+                    <div class="steps mobile-none">
                         <div class="steps-content">
                             <div class="steps-round">
                                 01
@@ -227,7 +227,7 @@
                         </div>
                         <div class="check call-check">
                             <div class="agree">
-                                <input type="agree" id="check1">
+                                <input type="checkbox" id="check1">
                                 <label for="check1" class="call-agree">I agree to the processing of personal data</label>
                             </div>
                         </div>
@@ -243,9 +243,9 @@
                     </div>
                 </div>
             </div>
-            <div id="contacts" class="location mobile-none">
+            <div id="contacts" class="location">
                 <div class="services-logo">
-                    <h2 class="font-header services-header">CONTACTS</h2>
+                    <h2 class="font-header services-header font-white">CONTACTS</h2>
                     <nav class="contact">
                         <ul class="navi">
                             <li class="navi-list">
@@ -273,7 +273,7 @@
                     <iframe class="location-frame" src="https://yandex.ru/map-widget/v1/-/CCr5j1b" height="400" frameborder="1" allowfullscreen="true"></iframe>
                 </div>
             </div>
-            <footer class="header footer mobile-none">
+            <footer class="header footer">
                 <div class="header-container">
                     <div class="logo font-tmp">
                         <a href="#" class="link font-tmp">PCC "PSYHOLOGICAL COUCHING CENTER"</a>
