--- a/index.html
+++ b/index.html
@@ -227,8 +227,10 @@
                         </div>
                         <div class="check call-check">
                             <div class="agree">
-                                <input type="checkbox" id="check1">
-                                <label for="check1" class="call-agree">I agree to the processing of personal data</label>
+                                <label class="checkbox">
+                                    <input type="checkbox" id="check1">
+                                    <div class="checkbox__text">I agree to the processing of personal data</div>
+                                </label>                                
                             </div>
                         </div>
                         <div class="call-button">
