--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tutorial-call">
+                    <div class="tutorial-call mobile-none">
                         <p class="call-header">Fill in the form to register for the appointment</p>
                         <div class="tutorial-input">
                             <div class="input call-input">
@@ -241,6 +241,38 @@
                                 <img src="./images/gift.svg" alt="save-your-money">
                             </div>
                             <p class="discount-text">Get the 10% discount for buying the full course of 5 visits</p>
+                        </div>
+                    </div>
+                    <div class="tutorial-call-mobile desknone">
+                        <p class="call-header">Fill in the form to register for the appointment</p>
+                        <div class="tutorial-input">
+                            <div class="input call-input">
+                                <p><span class="lightgrey">Name</span></p>
+                                <input type="text" name="" placeholder="What is your name:" class="input-window input-window-call">
+                            </div>
+                            <div class="input call-input">
+                                <p><span class="lightgrey">Type of problem</span><br></p>
+                                <input type="text" name="" placeholder="Your type of problem:" class="input-window input-window-call">
+                            </div>
+                            <div class="input call-input">
+                                <p><span class="lightgrey">Phone</span><br></p>
+                                <input type="text" name="" placeholder="Your phone number:" class="input-window input-window-call">
+                            </div>
+                            <div class="input call-input">
+                                <p><span class="lightgrey">Email</span><br></p>
+                                <input type="text" name="" placeholder="Your email:" class="input-window input-window-call">
+                            </div>
+                        </div>
+                        <div class="check call-check">
+                            <div class="agree">
+                                <label class="checkbox">
+                                    <input type="checkbox" id="check1">
+                                    <div class="checkbox__text">I agree to the processing of personal data</div>
+                                </label>                                
+                            </div>
+                        </div>
+                        <div class="call-button">
+                            <button type="button" class="button">CONFIRM</button>
                         </div>
                     </div>
                 </div>
