--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                                 <div class="about-us-img about-us-img-desktopnone">
                                     <img src="./images/image1.jpg" alt="done-project" class="img" id="m-img">
                                     <div class="mobile-arrows">
-                                        <button type="button" class="button-left" id="m-button-left"></button>
-                                        <button type="button" class="button-right" id="m-button-right"></button>
+                                        <button type="button" class="button-left" id="button-left"></button>
+                                        <button type="button" class="button-right" id="button-right"></button>
                                     </div>
                                 </div>
                                 <div class="about-details">
@@ -103,13 +103,19 @@
                         </div>
                         <div class="mobile-none">
                             <div class="about-us-img">
+                                <div class="mobile-none">
+                                    <div class="navigation">
+                                      <a href="javascript:showFirst()" class="navigation__link" id="first_link">MOSCOW</a>
+                                      <a href="javascript:showSecond()" class="navigation__link" id="second_link">SAINT-PETERSBERG</a>
+                                    </div>
+                                </div>
                                 <img src="./images/image1.jpg" alt="done-project" class="img" id="img">
                             </div>
                             <div class="arrows mobile-none">
-                                <button type="button" class="arrows-left button-left"></button>
-                                <div class="arrows-dot arrows-dot-active"></div>
-                                <div class="arrows-dot arrows-dot-unactive"></div>
-                                <button type="button" class="arrows-right button-right"></button>
+                                <button type="button" class="arrows-left button-left" id='button_left'></button>
+                                <div class="arrows-dot arrows-dot-active" id="dot1" onclick="showFirst()"></div>
+                                <div class="arrows-dot arrows-dot-unactive" id="dot2" onclick="showSecond()"></div>
+                                <button type="button" class="arrows-right button-right" id='button_right'></button>
                             </div>
                         </div>
                     </div>
@@ -337,5 +343,6 @@
                 </div>
             </footer>
         </main>
+        <script src="index.js"></script>
     </body>
 </html>
