--- a/index.html
+++ b/index.html
@@ -225,12 +225,10 @@
                                 <input type="text" name="" placeholder="Your email:" class="input-window input-window-call">
                             </div>
                         </div>
-                        <div class="check call-check">
-                            <div class="agree">
-                                <label class="checkbox">
-                                    <input type="checkbox" id="check1">
-                                    <div class="checkbox__text">I agree to the processing of personal data</div>
-                                </label>                                
+                        <div class="check mobile__none">
+                            <div class="checkbox">
+                                <input type="checkbox" id="check">
+                                <label for="check">I agree to the processing of personal data</label>
                             </div>
                         </div>
                         <div class="call-button">
@@ -263,12 +261,10 @@
                                 <input type="text" name="" placeholder="Your email:" class="input-window input-window-call">
                             </div>
                         </div>
-                        <div class="check call-check">
-                            <div class="agree">
-                                <label class="checkbox">
-                                    <input type="checkbox" id="check1">
-                                    <div class="checkbox__text">I agree to the processing of personal data</div>
-                                </label>                                
+                        <div class="check">
+                            <div class="checkbox">
+                                <input type="checkbox" id="check">
+                                <label for="check">I agree to the processing of personal data</label>
                             </div>
                         </div>
                         <div class="call-button">
