--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                 <input type="text" name="" placeholder="Your email:" class="input-window input-window-call">
                             </div>
                         </div>
-                        <div class="check mobile__none">
+                        <div class="check">
                             <div class="checkbox">
                                 <input type="checkbox" id="check">
                                 <label for="check">I agree to the processing of personal data</label>
@@ -241,7 +241,7 @@
                             <p class="discount-text">Get the 10% discount for buying the full course of 5 visits</p>
                         </div>
                     </div>
-                    <div class="tutorial-call-mobile desknone">
+                    <div class="desknone">
                         <p class="call-header">Fill in the form to register for the appointment</p>
                         <div class="tutorial-input">
                             <div class="input call-input">
@@ -263,8 +263,8 @@
                         </div>
                         <div class="check">
                             <div class="checkbox">
-                                <input type="checkbox" id="check">
-                                <label for="check">I agree to the processing of personal data</label>
+                                <input type="checkbox" id="check-mobile">
+                                <label for="check-mobile">I agree to the processing of personal data</label>
                             </div>
                         </div>
                         <div class="call-button">
