--- a/index.html
+++ b/index.html
@@ -105,16 +105,16 @@
                             <div class="about-us-img">
                                 <div class="mobile-none">
                                     <div class="navigation">
-                                      <a href="javascript:showFirst()" class="navigation__link" id="first_link">MOSCOW</a>
-                                      <a href="javascript:showSecond()" class="navigation__link" id="second_link">SAINT-PETERSBERG</a>
+                                      <a href="javascript:showMsc()" class="navigation__link" id="first_link">MOSCOW</a>
+                                      <a href="javascript:showSpb()" class="navigation__link" id="second_link">SAINT-PETERSBERG</a>
                                     </div>
                                 </div>
                                 <img src="./images/image1.jpg" alt="done-project" class="img" id="img">
                             </div>
                             <div class="arrows mobile-none">
                                 <button type="button" class="arrows-left button-left" id='button_left'></button>
-                                <div class="arrows-dot arrows-dot-active" id="dot1" onclick="showFirst()"></div>
-                                <div class="arrows-dot arrows-dot-unactive" id="dot2" onclick="showSecond()"></div>
+                                <div class="arrows-dot arrows-dot-active" id="point1" onclick="showMsc()"></div>
+                                <div class="arrows-dot arrows-dot-unactive" id="point2" onclick="showSpb()"></div>
                                 <button type="button" class="arrows-right button-right" id='button_right'></button>
                             </div>
                         </div>
