--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                                     «Don’t ask yourself what the world needs. Ask yourself what makes you come alive, and go do that, because what the world needs is people who have come alive»<br> — Horward Thruman
                                 </p>
                                 <div class="about-us-img about-us-img-desktopnone">
-                                    <img src="./images/image1.jpg" alt="done-project" class="img" id="m-img">
+                                    <img src="images/image1.jpg" alt="done-project" class="img" id="img1">
                                     <div class="mobile-arrows">
-                                        <button type="button" class="button-left" id="button-left"></button>
-                                        <button type="button" class="button-right" id="button-right"></button>
+                                        <button type="button" class="button-left" id="button_left1"></button>
+                                        <button type="button" class="button-right" id="button_right1"></button>
                                     </div>
                                 </div>
                                 <div class="about-details">
@@ -109,7 +109,7 @@
                                       <a href="javascript:showSpb()" class="navigation__link" id="second_link">SAINT-PETERSBERG</a>
                                     </div>
                                 </div>
-                                <img src="./images/image1.jpg" alt="done-project" class="img" id="img">
+                                <img src="images/image1.jpg" alt="done-project" class="img" id="img">
                             </div>
                             <div class="arrows mobile-none">
                                 <button type="button" class="arrows-left button-left" id='button_left'></button>
