--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                             <div class="about-us-img">
                                 <div class="mobile-none">
                                     <div class="navigation">
-                                      <a href="javascript:showMsc()" class="navigation__link" id="first_link">MOSCOW</a>
-                                      <a href="javascript:showSpb()" class="navigation__link" id="second_link">SAINT-PETERSBERG</a>
+                                      <a href="javascript:showMsc()" class="navigation__link font-tmp" id="first_link">MOSCOW</a>
+                                      <a href="javascript:showSpb()" class="navigation__link font-nav" id="second_link">SAINT-PETERSBERG</a>
                                     </div>
                                 </div>
                                 <img src="images/image1.jpg" alt="done-project" class="img" id="img">
